--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,5 +16,9 @@
         <button id="selectQuestionButton">Wybierz pytanie&nbsp(1-80)&nbsp<input id="selectInput" type="number" min="1" max="80" value="1"></button>
         <div id="answer" class="hidden"></div>
     </div>
+    <div>
+        <p id="credits">Bartosz Woliński</p>
+    </div>
+    
 </body>
 </html>
