--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Egzamin Inżynierski AiR</h1>
+        <h1>Egzamin Inżynierski AIR</h1>
         <div id="question">Wylosuj Pytanie</div>
         <button id="showAnswerButton">Pokaż Odpowiedź</button> 
         <button id="nextQuestionButton">Losuj Pytanie</button>
